--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -13,96 +13,18 @@
             <div class="col-md-6 col-xl-4 px-0">
                 <!-- <h6 class="font-weight-bold mb-3 text-center text-lg-left">Member</h6> -->
                 <div class="white z-depth-1 px-3 pt-3 pb-0">
-                    <ul class="list-unstyled friend-list">
-                        <li class="active grey lighten-3 p-2">
+                    <ul *ngFor="let item of listLastMessages" class="list-unstyled friend-list">
+                        <li class="p-2">
                             <a href="#" class="d-flex justify-content-between">
-                                <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-8.webp" alt="avatar" class="avatar rounded-circle d-flex align-self-center mr-2 z-depth-1">
+                                 <!-- <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-8.webp" alt="avatar" class="avatar rounded-circle d-flex align-self-center mr-2 z-depth-1">  -->
                                 <div class="text-small">
-                                    <strong>John Doe</strong>
-                                    <p class="last-message text-muted">Hello, Are you there?</p>
+                                    <strong>{{item.nameFrom}}</strong>
+                                    <p class="last-message text-muted">{{item.message}}</p>
                                 </div>
-                                <div class="chat-footer">
+                                 <div *ngIf="checkMessageNow(item)" class="chat-footer">
                                     <p class="text-smaller text-muted mb-0">Just now</p>
                                     <mdb-badge danger="true" class="float-right"></mdb-badge>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="p-2">
-                            <a href="#" class="d-flex justify-content-between">
-                                <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-1.webp" alt="avatar" class="avatar rounded-circle d-flex align-self-center mr-2 z-depth-1">
-                                <div class="text-small">
-                                    <strong>Danny Smith</strong>
-                                    <p class="last-message text-muted">Lorem ipsum dolor sit.</p>
-                                </div>
-                                <div class="chat-footer">
-                                    <p class="text-smaller text-muted mb-0">5 min ago</p>
-                                    <span class="text-muted float-right"><mdb-icon fas icon="reply" aria-hidden="true"></mdb-icon></span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="p-2">
-                            <a href="#" class="d-flex justify-content-between">
-                                <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-2.webp" alt="avatar" class="avatar rounded-circle d-flex align-self-center mr-2 z-depth-1">
-                                <div class="text-small">
-                                    <strong>Alex Steward</strong>
-                                    <p class="last-message text-muted">Lorem ipsum dolor sit.</p>
-                                </div>
-                                <div class="chat-footer">
-                                    <p class="text-smaller text-muted mb-0">Yesterday</p>
-                                    <span class="text-muted float-right"><mdb-icon fas icon="reply" aria-hidden="true"></mdb-icon></span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="p-2">
-                            <a href="#" class="d-flex justify-content-between">
-                                <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-3.webp" alt="avatar" class="avatar rounded-circle d-flex align-self-center mr-2 z-depth-1">
-                                <div class="text-small">
-                                    <strong>Ashley Olsen</strong>
-                                    <p class="last-message text-muted">Lorem ipsum dolor sit.</p>
-                                </div>
-                                <div class="chat-footer">
-                                    <p class="text-smaller text-muted mb-0">Yesterday</p>
-                                    <span class="text-muted float-right"><mdb-icon fas icon="reply" aria-hidden="true"></mdb-icon></span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="p-2">
-                            <a href="#" class="d-flex justify-content-between">
-                                <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-4.webp" alt="avatar" class="avatar rounded-circle d-flex align-self-center mr-2 z-depth-1">
-                                <div class="text-small">
-                                    <strong>Kate Moss</strong>
-                                    <p class="last-message text-muted">Lorem ipsum dolor sit.</p>
-                                </div>
-                                <div class="chat-footer">
-                                    <p class="text-smaller text-muted mb-0">Yesterday</p>
-                                    <span class="text-muted float-right"><mdb-icon fas icon="reply" aria-hidden="true"></mdb-icon></span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="p-2">
-                            <a href="#" class="d-flex justify-content-between">
-                                <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.webp" alt="avatar" class="avatar rounded-circle d-flex align-self-center mr-2 z-depth-1">
-                                <div class="text-small">
-                                    <strong>Lara Croft</strong>
-                                    <p class="last-message text-muted">Lorem ipsum dolor sit.</p>
-                                </div>
-                                <div class="chat-footer">
-                                    <p class="text-smaller text-muted mb-0">Yesterday</p>
-                                    <span class="text-muted float-right"><mdb-icon fas icon="reply" aria-hidden="true"></mdb-icon></span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="p-2">
-                            <a href="#" class="d-flex justify-content-between">
-                                <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-6.webp" alt="avatar" class="avatar rounded-circle d-flex align-self-center mr-2 z-depth-1">
-                                <div class="text-small">
-                                    <strong>Brad Pitt</strong>
-                                    <p class="last-message text-muted">Lorem ipsum dolor sit.</p>
-                                </div>
-                                <div class="chat-footer">
-                                    <p class="text-smaller text-muted mb-0">5 min ago</p>
-                                    <span class="text-muted float-right"><mdb-icon fas icon="check" aria-hidden="true"></mdb-icon></span>
-                                </div>
+                                </div>  
                             </a>
                         </li>
                     </ul>
@@ -159,7 +81,7 @@
                                 <textarea class="form-control pl-2 my-0" id="exampleFormControlTextarea2" rows="3" placeholder="Type your message here..."></textarea>
                             </div>
                         </li>
-                        <button type="button" mdbBtn color="info" rounded="true" size="sm" class="waves-effect waves-light float-right">Send</button>
+                        <button type="submit" class="btn btn-success">Enviar</button>
                     </ul>
 
                 </div>
