--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -13,20 +13,25 @@
             <div class="col-md-6 col-xl-4 px-0">
                 <!-- <h6 class="font-weight-bold mb-3 text-center text-lg-left">Member</h6> -->
                 <div class="white z-depth-1 px-3 pt-3 pb-0">
-                    <ul *ngFor="let item of listLastMessages" class="list-unstyled friend-list">
-                        <li class="p-1">
+                    <ul *ngFor="let item of listLastMessages" class="list-unstyled friend-list" style="margin-bottom: 0rem;">
+                        <li [ngClass]="{'active grey': item.checked}" class="p-1">
                             <a (click)="selectDialog(item)" class="d-flex justify-content-between">
                                  <!-- <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-8.webp" alt="avatar" class="avatar rounded-circle d-flex align-self-center mr-2 z-depth-1">  -->
                                 <div class="text-small">
-                                    <strong>{{item.nameTo}}</strong>
+                                    <strong>{{getName(item)}}</strong>
                                     <p class="last-message text-muted">
                                         {{item.message && item.message.length > 70 ? item.message.substring(0, 70) + '...' : item.message }}
                                     </p>
                                 </div>
-                                 <div *ngIf="checkMessageNow(item)" class="chat-footer">
-                                    <p class="text-smaller text-muted mb-0">Just now</p>
+                                 <div *ngIf="checkMessageNow(item); else messageTime" class="chat-footer">
+                                    <p class="text-smaller text-muted mb-0">Agora</p>
                                     <mdb-badge danger="true" class="float-right"></mdb-badge>
-                                </div>  
+                                </div>
+                                <ng-template #messageTime>
+                                    <div class="chat-footer">
+                                        <p class="text-smaller text-muted mb-0">{{convertTimeZone(item.dateTime)}}</p>
+                                    </div>
+                                </ng-template>    
                             </a>
                         </li>
                     </ul>
@@ -39,9 +44,10 @@
             <div class="col-md-6 col-xl-8 pl-md-3 px-lg-auto px-0">
                 <div class="chat-message">
                     <ul class="list-unstyled chat">
+                        <!-- Message out -->
                         <li class="d-flex justify-content-between mb-4">
                             <!-- <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-6.webp" alt="avatar" class="avatar rounded-circle d-flex align-self-start mr-2 z-depth-1"> -->
-                            <div class="chat-body white p-3 ml-2 z-depth-1">
+                            <div class="chat-body chat-out p-3 ml-6 z-depth-1">
                                 <div class="header">
                                     <strong class="primary-font">Brad Pitt</strong>
                                     <small class="pull-right text-muted"><mdb-icon far icon="clock"></mdb-icon> 12 mins ago</small>
@@ -52,8 +58,9 @@
                                 </p>
                             </div>
                         </li>
+                        <!-- Message in -->
                         <li class="d-flex justify-content-between mb-4">
-                            <div class="chat-body white p-3 z-depth-1">
+                            <div class="chat-body chat-in p-3 mr-6 z-depth-1">
                                 <div class="header">
                                     <strong class="primary-font">Lara Croft</strong>
                                     <small class="pull-right text-muted"><mdb-icon far icon="clock"></mdb-icon> 13 mins ago</small>
