--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -29,7 +29,7 @@
                                 </div>
                                 <ng-template #messageTime>
                                     <div class="chat-footer">
-                                        <p class="text-smaller text-muted mb-0">{{convertTimeZone(item.dateTime)}}</p>
+                                        <p class="text-smaller text-muted mb-0">{{convertTimeZoneLastMessage(item.dateTime)}}</p>
                                     </div>
                                 </ng-template>    
                             </a>
@@ -42,47 +42,49 @@
 
             <!-- Lista de mensagens -->
             <div class="col-md-6 col-xl-8 pl-md-3 px-lg-auto px-0">
-                <div class="chat-message">
+                <div>
                     <ul *ngFor="let item of selectedMessagesOnChat" class="list-unstyled chat">
                         <!-- Message out -->
-                        <li *ngIf="item.phoneFrom == phoneMain" class="d-flex justify-content-between mb-4">
+                        <li *ngIf="item.phoneFrom == phoneMain.phone" class="justify-content-between mb-4">
                             <!-- <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-6.webp" alt="avatar" class="avatar rounded-circle d-flex align-self-start mr-2 z-depth-1"> -->
                             <div class="chat-body chat-out p-3 ml-6 z-depth-1">
                                 <div class="header">
-                                    <strong class="primary-font">Brad Pitt</strong>
-                                    <small class="pull-right text-muted"><mdb-icon far icon="clock"></mdb-icon> 12 mins ago</small>
+                                    <strong class="primary-font">{{ phoneMain.name }}</strong>
+                                    <small class="pull-right text-muted"><mdb-icon far icon="clock"></mdb-icon> {{convertTimeZoneChat(item.dateTime)}}</small>
                                 </div>
                                 <hr class="w-100">
                                 <p class="mb-0">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    {{item.message}}
                                 </p>
                             </div>
                         </li>
                         <!-- Message in -->
-                        <li *ngIf="item.phoneFrom != phoneMain" class="d-flex justify-content-between mb-4">
+                        <li *ngIf="item.phoneFrom != phoneMain.phone" class="justify-content-between mb-4">
                             <div class="chat-body chat-in p-3 mr-6 z-depth-1">
                                 <div class="header">
-                                    <strong class="primary-font">Lara Croft</strong>
-                                    <small class="pull-right text-muted"><mdb-icon far icon="clock"></mdb-icon> 13 mins ago</small>
+                                    <strong class="primary-font">{{phoneClient.name}}</strong>
+                                    <small class="pull-right text-muted"><mdb-icon far icon="clock"></mdb-icon> {{convertTimeZoneChat(item.dateTime)}}</small>
                                 </div>
                                 <hr class="w-100">
                                 <p class="mb-0">
-                                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
+                                    {{ item.message }}
                                 </p>
                             </div>
                             <!-- <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.webp" alt="avatar" class="avatar rounded-circle d-flex align-self-start ml-2 z-depth-1"> -->
                         </li>                        
                     </ul>
-                    <div *ngIf="selected">
+
+                    <div *ngIf="selected" class="dialog-chat">
+                    <form [formGroup]="messageForm" (ngSubmit)="sendMessage()">
                         <div class="white">
                             <div class="form-group basic-textarea">
-                                <textarea class="form-control pl-2 my-0" id="exampleFormControlTextarea2" rows="3" placeholder="Type your message here..."></textarea>
+                                <textarea class="form-control pl-2 my-0" role="textbox" #textAreaMessage formControlName="typedMessage" rows="2" placeholder="Escreva sua mensagem aqui..."></textarea>
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-success">Enviar</button>
+                        <button type="submit" class="btn btn-success" cdkFocusInitial>Enviar</button>
+                    </form>
                     </div>
                 </div>
-
             </div>
             <!-- Fim Lista de mensagens -->
 
