--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -8,90 +8,92 @@
 <mdb-card class="chat-room">
     <mdb-card-body class="grey lighten-3">
         <!-- Grid row -->
-        <div class="row px-lg-2 px-2">
-            <!-- Lista de contatos -->
-            <div class="col-md-6 col-xl-4 px-0">
-                <!-- <h6 class="font-weight-bold mb-3 text-center text-lg-left">Member</h6> -->
-                <div class="white z-depth-1 px-3 pt-3 pb-0">
-                    <ul *ngFor="let item of listLastMessages" class="list-unstyled friend-list" style="margin-bottom: 0rem;">
-                        <li [ngClass]="{'active grey': item.checked}" class="p-1">
-                            <a (click)="selectDialog(item)" class="d-flex justify-content-between">
-                                 <!-- <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-8.webp" alt="avatar" class="avatar rounded-circle d-flex align-self-center mr-2 z-depth-1">  -->
-                                <div class="text-small">
-                                    <strong>{{getName(item)}}</strong>
-                                    <p class="last-message text-muted">
-                                        {{item.message && item.message.length > 70 ? item.message.substring(0, 70) + '...' : item.message }}
-                                    </p>
-                                </div>
-                                 <div *ngIf="checkMessageNow(item); else messageTime" class="chat-footer">
-                                    <p class="text-smaller text-muted mb-0">Agora</p>
-                                    <mdb-badge danger="true" class="float-right"></mdb-badge>
-                                </div>
-                                <ng-template #messageTime>
-                                    <div class="chat-footer">
-                                        <p class="text-smaller text-muted mb-0">{{convertTimeZoneLastMessage(item.dateTime)}}</p>
-                                    </div>
-                                </ng-template>    
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-
-            </div>
-            <!-- Fim Lista de contatos -->
-
-            <!-- Lista de mensagens -->
-            <div class="col-md-6 col-xl-8 pl-md-3 px-lg-auto px-0">
-                <div>
-                    <ul *ngFor="let item of selectedMessagesOnChat" class="list-unstyled chat">
-                        <!-- Message out -->
-                        <li *ngIf="item.phoneFrom == phoneMain.phone" class="justify-content-between mb-4">
-                            <!-- <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-6.webp" alt="avatar" class="avatar rounded-circle d-flex align-self-start mr-2 z-depth-1"> -->
-                            <div class="chat-body chat-out p-3 ml-6 z-depth-1">
-                                <div class="header">
-                                    <strong class="primary-font">{{ phoneMain.name }}</strong>
-                                    <small class="pull-right text-muted">
-                                        <mdb-icon *ngIf="!item.wasVisible" far icon="clock"></mdb-icon>
-                                        <mdb-icon *ngIf="item.wasVisible" fas icon="check"></mdb-icon>
-                                         {{convertTimeZoneChat(item.dateTime)}}</small>
-                                </div>
-                                <hr class="w-100">
-                                <p class="mb-0">
-                                    {{item.message}}
-                                </p>
-                            </div>
-                        </li>
-                        <!-- Message in -->
-                        <li *ngIf="item.phoneFrom != phoneMain.phone" class="justify-content-between mb-4">
-                            <div class="chat-body chat-in p-3 mr-6 z-depth-1">
-                                <div class="header">
-                                    <strong class="primary-font">{{phoneClient.name}}</strong>
-                                    <small class="pull-right text-muted"><mdb-icon far icon="clock"></mdb-icon> {{convertTimeZoneChat(item.dateTime)}}</small>
-                                </div>
-                                <hr class="w-100">
-                                <p class="mb-0">
-                                    {{ item.message }}
-                                </p>
-                            </div>
-                            <!-- <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.webp" alt="avatar" class="avatar rounded-circle d-flex align-self-start ml-2 z-depth-1"> -->
-                        </li>                        
-                    </ul>
-
-                    <div *ngIf="selected" class="dialog-chat">
-                    <form [formGroup]="messageForm" (ngSubmit)="sendMessage()">
-                        <div class="white">
-                            <div class="form-group basic-textarea">
-                                <textarea class="form-control pl-2 my-0" role="textbox" #textAreaMessage formControlName="typedMessage" rows="2" placeholder="Escreva sua mensagem aqui..."></textarea>
-                            </div>
-                        </div>
-                        <button type="submit" class="btn btn-success" cdkFocusInitial>Enviar</button>
-                    </form>
+        <div class="row px-lg-2 px-2">  
+        <!-- Lista de contatos -->
+        <div class="col-md-6 col-xl-4 px-0">  
+            <!-- <h6 class="font-weight-bold mb-3 text-center text-lg-left">Member</h6> -->
+            <div class="white z-depth-1 px-2 pt-3 pb-0 members-panel-1 scrollbar-light-blue">
+            <ul *ngFor="let item of listLastMessages" class="list-unstyled friend-list">
+                <li [ngClass]="{'active grey': item.checked}" class="p-1">
+                <a (click)="selectDialog(item)" class="d-flex justify-content-between">
+                    <!-- <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-8.webp" alt="avatar" class="avatar rounded-circle d-flex align-self-center mr-2 z-depth-1"> -->
+                    <div class="text-small">
+                        <strong>{{getName(item)}}</strong>
+                        <p class="last-message text-muted">
+                            {{item.message && item.message.length > 70 ? item.message.substring(0, 70) + '...' : item.message }}
+                        </p>
                     </div>
-                </div>
+                    <div *ngIf="checkMessageNow(item); else messageTime" class="chat-footer">
+                        <p class="text-smaller text-muted mb-0">Agora</p>
+                        <mdb-badge danger="true" class="float-right"></mdb-badge>
+                    </div>
+                    <ng-template #messageTime>
+                        <div class="chat-footer">
+                            <p class="text-smaller text-muted mb-0">{{convertTimeZoneLastMessage(item.dateTime)}}</p>
+                        </div>
+                    </ng-template>
+                </a>
+                </li>
+            </ul>
             </div>
-            <!-- Fim Lista de mensagens -->
 
         </div>
-        <!-- Grid row -->
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-6 col-xl-8 pl-md-3 px-lg-auto px-0">  
+            <div class="chat-message chat-1">  
+                <ul *ngFor="let item of selectedMessagesOnChat" class="list-unstyled scrollbar-light-blue">
+                    <!-- Message out -->
+                    <li *ngIf="item.phoneFrom == phoneMain.phone" class="justify-content-between mb-4">
+                        <div class="chat-body chat-out p-3 ml-6 z-depth-1">
+                            <div class="header">
+                                <strong class="primary-font">{{ phoneMain.name }}</strong>
+                                <small class="pull-right text-muted">
+                                    <mdb-icon *ngIf="!item.wasVisible" far icon="clock"></mdb-icon>
+                                    <mdb-icon *ngIf="item.wasVisible" fas icon="check"></mdb-icon>
+                                     {{convertTimeZoneChat(item.dateTime)}}
+                                </small>
+                            </div>
+                            <hr class="w-100">
+                            <p class="mb-0">
+                                {{item.message}}
+                            </p>
+                        </div>
+                    </li>  
+                    <!-- Message in -->
+                    <li *ngIf="item.phoneFrom != phoneMain.phone" class="justify-content-between mb-4">
+                        <div class="chat-body chat-in p-3 mr-6 z-depth-1">
+                          <div class="header">
+                            <strong class="primary-font">{{phoneClient.name}}</strong>
+                            <small class="pull-right text-muted">
+                                <mdb-icon *ngIf="!item.wasVisible" far icon="clock"></mdb-icon>
+                                <mdb-icon *ngIf="item.wasVisible" fas icon="check"></mdb-icon>
+                                 {{convertTimeZoneChat(item.dateTime)}}
+                            </small>
+                          </div>
+                          <hr class="w-100">
+                          <p class="mb-0">
+                            {{item.message}}
+                          </p>
+                        </div>
+                        <!-- <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.webp" alt="avatar" class="avatar rounded-circle mr-0 ml-3 z-depth-1"> -->
+                      </li>                
+                </ul>                               
+            </div>
+            <div *ngIf="selected" class="dialog-chat">
+                <form [formGroup]="messageForm" (ngSubmit)="sendMessage()">
+                    <div class="white">
+                        <div class="form-group basic-textarea">
+                            <textarea class="form-control pl-2 my-0" role="textbox" #textAreaMessage formControlName="typedMessage" rows="2" placeholder="Escreva sua mensagem aqui..."></textarea>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-success" cdkFocusInitial>Enviar</button>
+                </form>
+            </div>
+        </div>
+        <!-- Grid column -->  
+        </div>
+        <!-- Grid row -->  
     </mdb-card-body>
 </mdb-card>
