--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -1,37 +1,67 @@
-.basic-textarea textarea.bas  {
-    height: auto;
+.card.chat-room .members-panel-1,
+.card.chat-room .chat-1 {
+  position: relative;
+  overflow-y: scroll;
+}
+
+.card.chat-room .members-panel-1 {
+  height: 570px;
+}
+
+.card.chat-room .chat-1 {
+  height: 495px;
 }
 
 .card.chat-room .friend-list li {
-  border-bottom: 1px solid #e0e0e0; }
-  .card.chat-room .friend-list li:last-of-type {
-    border-bottom: none; }
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.card.chat-room .friend-list li:last-of-type {
+  border-bottom: none;
+}
 
 .card.chat-room img.rounded-circle {
-  border-radius: 50%; }
+  border-radius: 50%;
+}
 
 .card.chat-room img.avatar {
   height: 3rem;
-  width: 3rem; }
+  width: 3rem;
+}
 
 .card.chat-room .text-small {
-  font-size: 0.95rem; }
+  font-size: 0.95rem;
+}
 
 .card.chat-room .text-smaller {
-  font-size: 0.75rem; }
+  font-size: 0.75rem;
+}
 
- .border-last-message {
-  border-top: 1px solid rgba(49,70,80,0.33)
- }
+.scrollbar-light-blue::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: #F5F5F5;
+  border-radius: 10px;
+}
 
- .chat-out {
-   background-color: #00a884;
- }
+.scrollbar-light-blue::-webkit-scrollbar {
+  width: 12px;
+  background-color: #F5F5F5;
+}
 
- .chat-in {
-  background-color: #728795;
- }
+.scrollbar-light-blue::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: #82B1FF;
+}
 
- .dialog-chat {
-   bottom: 0;
- }
+.chat-out {
+  background-color: #00a884;
+}
+
+.chat-in {
+ background-color: #728795;
+}
+
+.dialog-chat {
+  bottom: 0;
+}
