--- a/src/app/pages/send-message/send-message.component.html
+++ b/src/app/pages/send-message/send-message.component.html
@@ -11,7 +11,9 @@
         <div class="card-header p-0 mx-3 mt-3 position-relative z-index-1"  *ngFor="let item of listContactList" style="width: 18rem;" >
           <div class="card-body bg-gradient-neutral">
             <h5 class="card-title">{{item.name}}</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+            <div class="ps-3">
+              <span class="text-sm" *ngIf="item.status">{{item.status}}</span>
+            </div>
             <div class="ps-3">
               <span class="text-sm" *ngIf="item.creationDate">Data de criação : {{item.creationDate | date: 'd, MMM y' : '+0300'}}</span>
             </div>
@@ -32,9 +34,6 @@
                 </select>
               </input-control>
             </div> 
-            <div>
-              <a class="btn btn-primary" (click)="sendMessage(item.id)" >Enviar mensagem</a>
-            </div>
           </div>
         </div>
       </div>
