--- a/src/app/pages/send-message/send-message.component.html
+++ b/src/app/pages/send-message/send-message.component.html
@@ -8,7 +8,7 @@
   <div class="col-12">
     <div class="card bg-gradient-green2 shadow">
       <div class="card-group">
-        <div class="card-header p-0 mx-3 mt-3 position-relative z-index-1"  *ngFor="let item of listContactList" style="width: 18rem;" >
+        <div class="card-header p-0 mx-3 mt-3 position-relative z-index-1" (click)="openModal()" *ngFor="let item of listContactList" style="width: 18rem;" >
           <div class="card-body bg-gradient-neutral">
             <h5 class="card-title">{{item.name}}</h5>
             <div class="ps-3">
@@ -26,17 +26,28 @@
             <div class="ps-3">
               <span class="text-sm" *ngIf="item.ordersCount">Média de pedidos {{item.ordersCount}}</span>
             </div>
-            <div>
-              <input-control label="Lista de mensagens" for="listMsg">
-                <select  class="form-control" id="listMsg" formControlName="listMsg">
-                  <option value=""></option>
-                  <option *ngFor="let item of listMsg" [value]="item.id">{{item.title}}</option>
-                </select>
-              </input-control>
-            </div> 
+          
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+
+<!-- Todo: voltar com modal -->
+<dsw-modal-base [showModal]="showModal" (closeModal)="closeModal()">
+  <div class="container p-5">
+    <div>
+      <input-control label="Lista de mensagens" for="listMsg">
+        <select  class="form-control" id="listMsg" >
+          <option value=""></option>
+          <option *ngFor="let item of listMsg" [value]="item.id">{{item.title}}</option>
+        </select>
+      </input-control> 
+      <div>
+        <a class="btn btn-primary" >Enviar mensagem</a>
+      </div>
+    </div> 
+  </div>
+</dsw-modal-base>
