implementação enviar mensagem em lista
implementação enviar mensagem em lista

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -18,7 +18,7 @@
 <div class="container mt--8 pb-5">
   <div class="row justify-content-center">
     <div class="col-lg-5 col-md-7">
-      <div class="card bg-secondary shadow border-0">
+      <div class="card bg-primary shadow border-0">
         <div class="card-body px-lg-5 py-lg-5">
 
           <form role="form" [formGroup]="loginForm" (submit)="signIn($event)">
