--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -5,7 +5,7 @@
         </div>
     </div>
 </div>
-<mdb-card class="chat-room" *ngIf="listLastMessages.length > 0">
+<mdb-card class="chat-room">
     <mdb-card-body class="grey lighten-3">
         <!-- Grid row -->
         <div class="row px-lg-2 px-2">  
@@ -67,7 +67,6 @@
                         <div class="chat-body chat-in p-3 mr-6 z-depth-1">
                           <div class="header">
                             <strong class="primary-font">{{phoneClient.name}}</strong>
-                            <a [href]="uriWhatsDialog+item.phoneFrom" target="_blank" style="margin: 4px; color: #14647F" href="#"><mdb-icon fab icon="whatsapp"></mdb-icon></a>
                             <small class="pull-right text-muted">
                                 <mdb-icon *ngIf="!item.wasVisible" far icon="clock"></mdb-icon>
                                 <mdb-icon *ngIf="item.wasVisible" fas icon="check"></mdb-icon>
