--- a/src/app/pages/send-message/send/send.component.html
+++ b/src/app/pages/send-message/send/send.component.html
@@ -1,41 +1,44 @@
 <div class="header bg-gradient-green2 pb-8 pt-5 pt-md-8">
     <div class="container-fluid">
-      <div class="row">
-      </div>
+        <div class="header-body">
+            <h3 class="mb-0  text-white">
+                {{item.name}} 
+              </h3> 
+        </div>
     </div>
 </div>
 <div class="container-fluid mt--7">
-  <div class="container p-5">
+    <div class="card shadow">
       <div>
-        <form [formGroup]="msgForm">
-          <div class="form-group" >
+        <form role="form" [formGroup]="msgForm">
+          <div class="col-lg-4" >
             <label for="formControlCountMenssage">Quantidade de mensagens:</label>
-            <input type="number" class="form-control" id="inpuCountMenssaget" placeholder="1000">
+            <input type="number" class="form-control" id="inpuCountMenssage"  formControlName="inpuCountMenssage" placeholder="1000">
           </div>
-          <div class="form-group">
+          <div class="col-lg-4" >
             <label>Mensagem a ser enviada:</label>
-            <select  class="form-control"  (change)="setParams()" id="inputListMsg" >
+            <select  class="form-control"  (change)="setParams()"  id="inputListMsg"  formControlName="inputListMsg" >
               <option value=""></option>
               <option *ngFor="let item of listMsg" [value]="item.id">{{item.title}}</option>
             </select>
           </div> 
-          <div class="form-group" *ngIf="showParamOrder">
+          <div class="col-lg-4" *ngIf="showParamOrder">
             <label for="formControlCountOrders">Quantidade Minima de pedidos:</label>
             <input type="number" class="form-control" id="inputCountOrders" placeholder="5">
           </div>
-          <div class="form-group" *ngIf="showParamCupon">
+          <div class="col-lg-4" *ngIf="showParamCupon">
             <label for="formControlCupom">Cupom:</label>
             <input type="text" class="form-control" id="inputParamCupon" placeholder="#cupomdacampanha">
           </div>
-          <div class="form-group" *ngIf="showParamProduct">
+          <div class="col-lg-4" *ngIf="showParamProduct">
             <label for="formControlNameProduct" >Nome do produto:</label>
             <input type="text" class="form-control" id="inputNameProduct" placeholder="Nome do produto">
           </div>
-          <div class="form-group" *ngIf="showParamData">
+          <div class="col-lg-4" *ngIf="showParamData">
             <label for="formControlNameProduct" >Data:</label>
             <input type="Data" class="form-control" id="inputData" placeholder="Data">
           </div>
-          <div class="form-group">
+          <div class="col-lg-4">
             <br>
             <a class="btn btn-primary" (click)="sendMessage()" >Enviar mensagem</a>
           </div>
@@ -43,7 +46,3 @@
       </div> 
     </div>
 </div>
-  
-  
-  
-      
