--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -22,8 +22,8 @@
 <div class="container mt--8 pb-5">
   <!-- Table -->
   <div class="row justify-content-center">
-    <div class="col-lg-6 col-md-8">
-      <div class="card bg-secondary shadow border-0">
+    <div class="col-lg-8 col-md-8">
+      <div class="card bg-gradient-lighter shadow border-0">
         <div class="card-body px-lg-5 py-lg-5">
           <form role="form" [formGroup]="registerForm" (submit)="onSubmit($event)">
 
